RESOLVED FIXED132296
WK2 iOS: crash when handling a synthetic keyboard event
https://bugs.webkit.org/show_bug.cgi?id=132296
Summary WK2 iOS: crash when handling a synthetic keyboard event
Enrica Casucci
Reported 2014-04-28 12:29:17 PDT
A synthetic keyboard event does not contain a valid platform keyboard event. We should null check keyEvent() before dereferencing, like we already do on Mac. <rdar://problem/16469726>
Attachments
Patch (2.04 KB, patch)
2014-04-28 12:33 PDT, Enrica Casucci
thorton: review+
Enrica Casucci
Comment 1 2014-04-28 12:33:11 PDT
Enrica Casucci
Comment 2 2014-04-28 15:02:58 PDT
Committed revision 167903
Note You need to log in before you can comment on or make changes to this bug.