WK2 iOS: crash when handling a synthetic keyboard event. https://bugs.webkit.org/show_bug.cgi?id=132296 <rdar://problem/16469726>

Reviewed by Benjamin Poulain.

Adding a null check, since synthetic keyboard events do not
have a corresponding platform event. We already do this on OS X.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::handleEditingKeyboardEvent):



Canonical link: https://commits.webkit.org/150312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167903 268f45cc-cd09-0410-ab3c-d52691b4dbfc